ensure list groups are aligned left by default

--- a/src/IdentityServerAspNetIdentity/wwwroot/css/list-group.scss
+++ b/src/IdentityServerAspNetIdentity/wwwroot/css/list-group.scss
@@ -1,3 +1,4 @@
 ﻿.list-group{
     list-style: none;  
+    text-align: left;
 }
